# post-quantum-studio

./: .env.example  .gitignore  AGENTS.md  COMMANDS.md  CONTEXT.md  Mastering the Kubernetes Gateway API.ics  README.md  ROADMAP.md  SECURITY.md  SKILL.md  SOUL.md  ci.yml  deepseek_bash_20260523_c4b344.sh  echozulu-deployment-operator.md  echozulu-security-governor.md  eslint.config.mjs  package.json  pyproject.toml  security-services.yaml  tailwind.config.ts  target.yaml  test_converter.py  vitest.config.ts
.agents/skills/post-quantum-studio/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: add-architecture-document.md  add-operations-guide.md  feature-development.md
.claude/homunculus/instincts/inherited/: post-quantum-studio-instincts.yaml
.claude/skills/post-quantum-studio/: SKILL.md
.codex/: AGENTS.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  policy.yml  sbom-and-scan.yml  security.yml
docs/architecture/: azure-ai-foundry-agentic-ops.md  qdk-research-lab.md  solution-architecture.md
docs/integrations/: media-ingestion.md
docs/observability/: profiling-and-debugging.md
docs/operations/: gists.md  git-hooks.md  secrets.md
mcp/: servers.md
policy/examples/: agent-task-allowed.json
policy/opa/: agent_task.rego
qdk/: README.md  qsharp.json
qdk/src/: QuantumRandomness.qs
skills-ref/: README.md
src/app/: globals.css  layout.tsx  page.tsx
src/lib/crypto/: demo-kem-provider.ts  kem-provider.ts
src/lib/pqc/: model.ts  risk.test.ts  risk.ts  sample-data.ts
