[project]
name = "openai-agent-lab"
version = "0.1.0"
description = "Windows 11 OpenAI API agentic programming development environment"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "openai-agents",
    "python-dotenv",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]